# channel_dsp

./: README.md
audio_processor/: #i2s.c#  CMakeLists.txt  audio_processor.c  i2s.h  i2s.pio
audio_processor/lib/: bits8.c  mcp4728.c  mcp4728.h  moving_average.c  moving_average.h  pcm1780.c  pcm1780.h  pcm3060.c  pcm3060.h
controller/: CMakeLists.txt  controller.c
controller/lib/: ADS1115.h  adc_dma.c  ads1115.c  ads1115.h  arialmt_plain_10.h  bits8.h  common.c  common.h  controller.h  monospaced_10.h  moving_average.c  moving_average.h  roboto_bold_16.h  rotary.pio  rotary_encoder.c  rotary_encoder.h  ssd1306_font.h  ssd1306_i2c_driver.c  ssd1306_i2c_driver.h  ui.c  ui.h  ws2812_driver.c  ws2812_driver.h  ws2812_driver.pio
controller/pages/: channel.c  channel.h
